    o Fix UTF-8 double encoding when FCGI is passed octets by downgrading
      them into bytes correctly. Fixes RT#52400 <chansen@cpan.org>

Version 0.68 --     31 Dec 2009  <mst@shadowcat.co.uk> Matt S Trout
    o No changes since the previous development release.

Version 0.67_01 --   20 Dec 2009  <mst@shadowcat.co.uk> Matt S Trout
    o Add FILENO method which returns a defined but invalid value to
      placate things such as IPC::Run which call fileno to check if a
      filehandle is open.
      Closes bugs:
      http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=544540
      http://rt.cpan.org/Public/Bug/Display.html?id=50972
      Removes need for upstream patch in OpenBSD <bobtfish@bobtfish.net>
    o Call the fcgi lib's attach/detach <robs@fastcgi.com>

Version 0.67 --    22 December 2002   <skimo@kotnet.org> Sven Verdoolaege

    o Fixes for pure perl version based on report and patch
      from "Kurtis D. Rader" <kdrader@us.ibm.com>
    o FCGI_UndoBinding perl 5.8.0 compatibility
      Reported by Marko Asplund <aspa@kronodoc.fi>
    o Fix problem with fcgi_config.h on win32.
      Reported by Igor Franchuk <softdep@rol.ru>
    o Add minimal tests

Version 0.66 --    5 September 2002   <skimo@kotnet.org> Sven Verdoolaege

    o perl 5.8.0 compatibility fix by Autrijus
    o library fixes from Rob

Version 0.65 --    19 February 2002   <skimo@kotnet.org> Sven Verdoolaege

    o fix perl 5.005 compatibility problem
    o fix strict warning

Version 0.64 --    25 September 2001   <skimo@kotnet.org> Sven Verdoolaege
Version 0.63 --    24 September 2001   <skimo@kotnet.org> Sven Verdoolaege

    o Update build process

Version 0.62 --    21 September 2001   <skimo@kotnet.org> Sven Verdoolaege

    o Move version number to separate file

Version 0.61 --    20 September 2001   <skimo@kotnet.org> Sven Verdoolaege

    o Fix refcounting bug
    o Add GetEnvironment for pure version
    o Add LastCall method
    o Allow filehandle for Request's socket parameter